--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "motion": "^11.13.3",
+    "framer-motion": "^11.13.3",
     "next": "15.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
